# rust-micrograd

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: moons.rs  moons_batched.rs  moons_bytecode.rs  moons_cc.rs  moons_codegen.rs
examples/common/: dataset.rs  mod.rs  plot.rs
src/: bytecode.rs  cc.rs  engine.rs  lib.rs  nn.rs
